# ERINYS-mem

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  README_ja.md  get_benchmark_results.py  glama.json  pyproject.toml  run_all_benchmarks.py
.github/workflows/: test.yml
benchmarks/: BENCHMARKS.md  TUNING_HISTORY.md  answerability_eval.py  convomem_bench.py  download_datasets.sh  enhanced_search.py  locomo_bench.py  longmemeval_bench.py  qa_eval.py  tune_locomo_boost.py
benchmarks/results/: results_erinys_convomem_enhanced_v2_20260416_1230.jsonl  results_erinys_convomem_enhanced_v2_boost_20260416_1921.jsonl  results_erinys_convomem_enhanced_v2_pref_20260416_1258.jsonl  results_erinys_convomem_enhanced_v2_pref_20260416_1308.jsonl  results_erinys_convomem_enhanced_v2_pref_20260416_1312.jsonl  results_erinys_convomem_enhanced_v2_pref_20260416_1324.jsonl  results_erinys_convomem_enhanced_v2_pref_20260416_1337.jsonl  results_erinys_enhanced_20260415_2259.jsonl  results_erinys_enhanced_20260415_2312.jsonl  results_erinys_enhanced_v2_20260415_2318.jsonl  results_erinys_enhanced_v2_20260415_2331.jsonl  results_erinys_enhanced_v2_20260415_2345.jsonl  results_erinys_enhanced_v2_20260415_2359.jsonl  results_erinys_enhanced_v2_20260416_0014.jsonl  results_erinys_enhanced_v2_20260416_0030.jsonl  results_erinys_enhanced_v2_20260416_0045.jsonl  results_erinys_enhanced_v2_20260416_0058.jsonl  results_erinys_enhanced_v2_20260416_0137.jsonl  results_erinys_enhanced_v2_20260416_0305.jsonl  results_erinys_enhanced_v2_20260416_0336.jsonl  results_erinys_enhanced_v2_20260416_0402.jsonl  results_erinys_enhanced_v2_20260416_0949.jsonl  results_erinys_enhanced_v2_20260416_1005.jsonl  results_erinys_enhanced_v2_20260416_1025.jsonl  results_erinys_enhanced_v2_20260416_1045.jsonl  results_erinys_enhanced_v2_20260416_1059.jsonl  results_erinys_enhanced_v2_boost_20260416_1711.jsonl  results_erinys_enhanced_v2_boost_20260416_1717.jsonl  results_erinys_enhanced_v2_boost_20260416_1720.jsonl  results_erinys_enhanced_v2_boost_20260416_1722.jsonl  results_erinys_enhanced_v2_boost_20260416_1759.jsonl  results_erinys_enhanced_v2_boost_20260416_1845.jsonl  results_erinys_enhanced_v2_boost_20260416_1916.jsonl  results_erinys_enhanced_v2_fulldb_20260416_1012.jsonl  results_erinys_enhanced_v2_fulldb_20260416_1016.jsonl  results_erinys_enhanced_v3_20260416_0412.jsonl  results_erinys_enhanced_v3_20260416_0454.jsonl  results_erinys_enhanced_v3_20260416_0713.jsonl  results_erinys_enhanced_v3_20260416_0916.jsonl  results_erinys_enhanced_v4_20260416_1145.jsonl  (+201 more)
docs/: COMPARISON.md  LIMITATIONS.md  TOOLS.md  benchmark_story_en.md  benchmark_story_ja.md
scripts/: backfill_provenance.py  migrate_all.py  migrate_embedding_model.py
src/erinys_memory/: __init__.py  _sqlite.py  cli.py  collider.py  config.py  db.py  decay.py  distill.py  embedding.py  graph.py  policy.py  preference_extract.py  provenance.py  schema.sql  search.py  server.py  session.py  temporal.py
tests/: conftest.py  test_answerability.py  test_answerability_eval.py  test_backfill_provenance.py  test_cli.py  test_collider.py  test_collider_candidates.py  test_consolidation_conflict.py  test_core.py  test_decay.py  test_distill.py  test_doctor.py  test_e2e.py  test_forget.py  test_graph.py  test_migration.py  test_policy.py  test_provenance.py  test_qa_eval.py  test_search.py  test_search_regression.py  test_search_safety.py  test_temporal.py  test_temporal_date_boost.py  test_warning_fixes.py  test_why_included.py
