[project]
name = "erinys-memory"
version = "0.5.1"
description = "Reflexive Memory for AI Agents — MCP Server"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "GhostyAI-HA" },
]
keywords = ["mcp", "memory", "ai-agent", "sqlite", "vector-search", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
dependencies = [
    "fastmcp>=3.2.0",
    "sqlite-vec>=0.1.6",
    "fastembed>=0.4.0",
    # pydantic is imported directly (cli.py); declare it rather than relying on
    # fastmcp pulling it transitively.
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]
# Fallback SQLite for interpreters built WITHOUT loadable-extension support
# (some macOS system Python / pyenv builds). Only needed when `erinys doctor`
# reports that the sqlite-vec extension cannot load. Wheels are published mainly
# for Linux; see docs/LIMITATIONS.md → "Python requirements".
fallback = [
    "pysqlite3-binary; platform_system == 'Linux'",
]

[project.scripts]
erinys = "erinys_memory.cli:main"
erinys-memory = "erinys_memory.server:main"

[project.urls]
Homepage = "https://github.com/GhostyAI-HA/ERINYS-mem"
Repository = "https://github.com/GhostyAI-HA/ERINYS-mem"
Issues = "https://github.com/GhostyAI-HA/ERINYS-mem/issues"
Changelog = "https://github.com/GhostyAI-HA/ERINYS-mem/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/erinys_memory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
